--- a/config/amazon.yml
+++ b/config/amazon.yml
@@ -1,3 +1,3 @@
-key:    'AKIAJLOSM63Z7QEXOWPQ'
-secret: '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'
+aws_access_key_id: 'AKIAJLOSM63Z7QEXOWPQ'
+aws_secret_access_key: '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'
 tag:    'ra06c-20'
